# parallel_pwmig

./: Dockerfile  Dockerfile_dev  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml
cxx/: CMakeLists.txt
cxx/cmake/: boost-download.cmake  pybind11-download.cmake
cxx/include/pwmig/gclgrid/: gclgrid.h
cxx/python/gclgrid/: CMakeLists.txt  gclgrid_py.cc
cxx/python/pwmigcore/: CMakeLists.txt  pwmigcore_py.cc
cxx/python/seispp/: CMakeLists.txt  seispp_py.cc
cxx/src/lib/: CMakeLists.txt
cxx/src/lib/gclgrid/: create_destroy.cc  operators.cc
cxx/src/lib/pwmigcore/: migrate_component_omp.cc  migrate_one_seismogram.cc
cxx/src/lib/seispp/: RadialGrid.cc
data/models/: ak135_download.txt
data/pf/: gridstacker.pf  pseudosource_stacker.pf  pwmig.pf  pwstack.pf  telecluster.pf
python/pwmigpy/dataprep/: binned_stacking.py  telecluster.py
python/pwmigpy/dataprep/scripts/: makegclgrid.py  project1dmod.py  pseudosource_stacker.py  telecluster.py
python/pwmigpy/db/: database.py
python/pwmigpy/pwmig/: dataset.py  gridstacker.py  pwmig.py  pwmig_serial.py  pwstack.py  pwstack_serial.py
python/pwmigpy/utility/: MongoMonitor.py  earthmodels.py
